# search-engine

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md
config/: config.json  requests.json
src/: CMakeLists.txt  main.cpp
src/my_lib/include/: converterjson.h  invertedindex.h  searchserver.h  structures.h  threadpool.h
src/my_lib/src/: converterjson.cpp  invertedindex.cpp  searchserver.cpp  threadpool.cpp
tests/: CMakeLists.txt  invertedindex_test.cpp  searchserver_test.cpp
